# ramp-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-binaries.yml  ci.yml
scripts/: build.sh
skills/apply-to-ramp/: SKILL.md
skills/approval-dashboard/: SKILL.md
skills/receipt-compliance/: SKILL.md
src/ramp_cli/: errors.py  main.py  skills.py  version_check.py
src/ramp_cli/animations/: card.py  nyc.py  rampy.py  rampy_idle.py  rampy_surf.py
src/ramp_cli/auth/: constants.py  oauth.py  refresh.py  store.py
src/ramp_cli/client/: api.py  session.py
src/ramp_cli/commands/: applications.py  auth.py  config.py  env.py  feedback.py  skills.py  tools.py  update.py
src/ramp_cli/config/: constants.py  settings.py
src/ramp_cli/easter_eggs/: flip.py  invoice.py  nyc.py  rampy.py
src/ramp_cli/output/: formatter.py  help.py  lifecycle.py  paginator.py  rampy_coin_game.py  style.py  utils.py
src/ramp_cli/skills/: __init__.py
src/ramp_cli/specs/: __init__.py  agent-tool.json  sync.py
src/ramp_cli/tools/: commands.py  parser.py  registry.py
tests/: conftest.py  test_agent_mode.py  test_applications.py  test_auth.py  test_client_api.py  test_client_session.py  test_coin_game.py  test_config.py  test_feedback.py  test_output.py  test_pagination.py  test_paginator.py  test_receipt_view.py  test_scope_filtering.py  test_skills.py  test_spec_sync.py  test_specs.py  test_style.py  test_tool_commands.py  test_tool_parser.py  test_tools_command.py  test_update.py  test_version_check.py
(+10 files in other folders)
