[project]
name = "ramp-cli"
description = "Ramp Developer CLI — interact with Ramp's API from your terminal"
authors = [{ name = "Ramp", email = "developer@ramp.com" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0,<9",
    "httpx>=0.25.0",
    "jsonref>=1.1.0",
    "tomli-w>=1.0.0",
]
dynamic = ["version"]

[project.scripts]
ramp = "ramp_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ramp_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ramp_cli"]
artifacts = ["src/ramp_cli/specs/*.json"]

[dependency-groups]
dev = [
    "nuitka>=2.0",
    "ordered-set>=4.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff==0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I"]
